@@ -31,8 +31,8 @@ public class SecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(request -> {
                     var config = new org.springframework.web.cors.CorsConfiguration();
-                    //config.setAllowedOrigins(List.of("http://localhost:5173"));
-                    config.setAllowedOrigins(Collections.singletonList("*"));
+                    config.setAllowedOrigins(List.of("http://localhost:5173"));
+                    //config.setAllowedOrigins(Collections.singletonList("*"));
                     config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
                     config.setAllowedHeaders(List.of("*"));
                     config.setAllowCredentials(true);
